# time_series

./: CMakeLists.txt  FindMKL.cmake
include/: ADF.hpp  Coeff_adf.hpp  Coeff_dfgls.hpp  Coeff_kpss.hpp  Coeff_pp.hpp  CsvManager.hpp  DFGLS.hpp  Johansen.hpp  KPSS.hpp  OLS.hpp  PP.hpp  Tools.hpp  URT.hpp  UnitRoot.hpp
src/: ADF.cpp  DFGLS.cpp  Johansen.cpp  KPSS.cpp  OLS.cpp  PP.cpp  UnitRoot.cpp
